# star-pass-discord

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/star_pass_discord/: main.py
src/star_pass_discord/core/: __init__.py  run.py
src/star_pass_discord/core/tasks/: __init__.py  executor.py  task.py
src/star_pass_discord/core/tasks/check_social_media/: __init__.py  task.py
src/star_pass_discord/environment/: __init__.py  get.py  model.py
src/star_pass_discord/socials/: __init__.py  model.py
src/star_pass_discord/socials/infrastructure/: __init__.py  get.py  model.py
src/star_pass_discord/socials/infrastructure/bluesky/: __init__.py  get.py
src/star_pass_discord/socials/infrastructure/instagram/: __init__.py  get.py
src/star_pass_discord/socials/infrastructure/mastodon/: __init__.py  get.py
src/star_pass_discord/socials/infrastructure/threads/: __init__.py  get.py
src/star_pass_discord/socials/infrastructure/youtube/: __init__.py  get.py
