[project]
name = "star-pass-discord"
version = "0.1.0"
description = "Discord bot managing STAR-PASS' official server"
authors = [
    {name = "Khenzii",email = "khenzii@khenzii.dev"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
star-pass-discord = "star_pass_discord.main:main"
